tests/suite/snapshots/suite__check__tests__check__bad-pa3-11.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-pa3-11.xi:2:16]
   │
 2 │ bar() { x:int, b:bool, _ = foo() }
   ·                ───┬──  
   ·                   ╰──── Expected bool but found int
───╯

